fix submit button vertical alignment

--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,6 @@ img{
   height: 38px;
   border: 1px solid black;
   font-weight: 500;
-  padding-top:5px;
   text-align:center;
 }
 #hanh-patio{
